# hadfs

./: .gitignore  .gitmodules  AUTHORS.md  ChangeLog.md  LICENSE  README.md  cabal.project  hadfs.cabal  shell.nix  stack.yaml
app/: Main.hs
doc/: hadfs-exe.1  hadfs.1
src/: HADFS.hs
src/HADFS/: AD.hs  FS.hs  LDIF.hs  Types.hs  Utils.hs
src/HADFS/AD/: Types.hs
src/HADFS/LDIF/: Parser.hs  Types.hs  Utils.hs
