cabal-version: 1.12
name:           hadfs
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/omgbebebe/hadfs#readme>
category:       Tools
homepage:       https://github.com/omgbebebe/hadfs#readme
bug-reports:    https://github.com/omgbebebe/hadfs/issues
author:         Sergey Bubnov
maintainer:     omgbebebe@gmail.com
copyright:      Copyright (c) 2019 Sergey Bubnov
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/omgbebebe/hadfs

library
  exposed-modules:
                  HADFS.AD
                , HADFS.AD.Types
                , HADFS.FS
                , HADFS.LDIF.Parser
                , HADFS.LDIF.Types
                , HADFS.LDIF.Utils
                , HADFS.Types
                , HADFS.Utils
  hs-source-dirs:
      src
  build-depends:
                base >=4.7 && <5
              , asn1-parse
              , asn1-encoding
              , asn1-types
              , attoparsec
              , base64-bytestring
              , binary
              , bytestring
              , containers
              , directory
              , filepath
              , HFuse >= 0.2.5
	      , LDAP >= 0.6.12
              , mtl
              , safe-exceptions
              , stm
              , text
              , unix-compat
  default-language: Haskell2010

executable hadfs-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >=4.7 && <5
               , filepath
               , directory
               , hadfs
              
  default-language: Haskell2010

test-suite hadfs-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hadfs
  default-language: Haskell2010
