cabal-version: 1.12
name:           hadfs
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/omgbebebe/hadfs#readme>
homepage:       https://github.com/omgbebebe/hadfs#readme
bug-reports:    https://github.com/omgbebebe/hadfs/issues
author:         Sergey Bubnov
maintainer:     omgbebebe@gmail.com
copyright:      Copyright (c) 2019 Sergey Bubnov
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/omgbebebe/hadfs

library
  exposed-modules:
      HADFS
      HADFS.Types
  hs-source-dirs:
      src
  build-depends:
      HFuse >=0.2.5
    , adldap
    , base >=4.7 && <5
    , bytestring
    , containers
    , directory
    , filepath
    , mtl
    , stm
    , text
    , unix-compat
  default-language: Haskell2010

executable hadfs-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      HFuse >=0.2.5
    , adldap
    , base >=4.7 && <5
    , directory
    , filepath
    , hadfs
    , mtl
    , network
    , text
  default-language: Haskell2010

test-suite hadfs-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      HFuse >=0.2.5
    , adldap
    , base >=4.7 && <5
    , directory
    , filepath
    , hadfs
    , mtl
    , text
  default-language: Haskell2010
